<resources>
    <string name="app_name">Календарь событий</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>

    <string name="nav_map">Ближайшие события на карте</string>
    <string name="title_activity_maps">Map</string>

    <string name="ok">OK</string>
    <string name="cancel">Назад</string>
    <string name="reset">Сбросить</string>
    <string name="search">Поиск</string>

    <string name="event_details_time_interval">Время: %1$s - %2$s</string>
    <string name="event_details_time">Время: %1$s</string>

    <string name="event_details_date">Дата: \t\t\t%1$s</string>
    <string name="event_details_date_interval">Дата: \t\t\t%1$s - %2$s</string>

    <string name="event_list_item_date">%1$s</string>
    <string name="event_list_item_date_interval">%1$s - %2$s</string>

    <string name="event_details_place">Место: %1$s</string>

    <string-array name="months_ru">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Карта</string>
    <string name="calendar">Календарь</string>
    <string name="events">События</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
</resources>
